fixed some spacing issues for h1 in mobile first design

--- a/sass/_general.css
+++ b/sass/_general.css
@@ -1,96 +1,6 @@
 @import 'https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Francois+One|Oswald:700';
 
 
-/* RESPONSIVE PREPARATION
-   ====================================================================
-   Use these "as is"
-*/
-
-
-/*The following 7 lines are from Paul Irish and apply a border-box model.
-See this page for more info: http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
-
-
-/* apply a natural box layout model to all elements, but allowing components to change */
-
-html {
-    box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-    box-sizing: inherit;
-}
-
-
-/* Basic Responsive Images and Video */
-
-img,
-video {
-    width: auto;
-    height: auto;
-    max-width: 100%;
-}
-
-
-/* Embedded Video Styles
-    These can be used to help add embedded video content, like YouTube videos, to your page. These styles require you set up your HTML in a specific way. See this CodePen for an example of it in use: http://codepen.io/profstein/pen/mArLRj
-*/
-
-.videoWrapper {
-    position: relative;
-    padding-top: 25px;
-    height: 0;
-}
-
-.videoWrapper.ratio-16-9 {
-    padding-bottom: 56.25%;
-    /* 16:9 aspect ratio video */
-}
-
-.videoWrapper.ratio-4-3 {
-    padding-bottom: 75%;
-    /* 4:3 aspect ratio video */
-}
-
-.videoWrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-
-/* Default Typography
-   ====================================================================
-*/
-
-html {
-    font-family: 'Crimson Text', 'Oswald', 'Francois One', sans-serif;
-    margin: 1.414em 0 0 .5em;
-    font-weight: inherit;
-    line-height: 1.2em;
-    font-size: 1.05em;
-    line-height: 1em;
-}
-
-
-/*These are used to display text like pre-formatted text and code samples*/
-
-pre,
-code,
-kbd,
-samp {
-    font-family: monospace, monospace;
-    font-size: 1em;
-    line-height: 1.15;
-    margin: 0;
-    padding: 0;
-}
-
-
 /*  ==========================================================================
    Forms
    ========================================================================== */
@@ -135,12 +45,13 @@ h1 {
     font-family: 'Oswald', sans-serif;
     font-size: 3.2em;
     margin: 1.414em 0 0 .5em;
-    margin-top: 0;
+    margin-top: 4.5em;
     padding: .5em;
     font-weight: inherit;
     line-height: 1.2em;
     color: #283744;
     text-align: center;
+
 }
 
 h2 {
@@ -219,6 +130,7 @@ footer {
 }
 
 .logo {
+    float:left;
     display: inline;
     position: top;
     padding: .5em;
